[project]
name = "acme-tiny-2"
description = "A tiny script to issue and renew TLS certs from Let's Encrypt"
readme = "README.md"
version = "1.0.0"
requires-python = ">=3.9"
license = { text = "MIT" }

authors = [
    {name = "Fredrik Jonsson", email = "frjo@xdeb.org"},
    {name = "Daniel Roesler", email = "diafygi@gmail.com"},
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/frjo/acme-tiny-2"

dependencies = [
]

[dependency-groups]
"dev" = [
    "pre-commit>=4.0.1",
    "ruff>=0.7.0",
    "setuptools>=75.6.0",
]
"test" = [
    "coverage[toml]>=7.4.4",
]

[tool.uv]
default-groups = ["dev", "test"]

[tool.coverage.run]
parallel = true

# https://github.com/charliermarsh/ruff#ruff
[tool.ruff]
line-length = 200
[tool.ruff.lint]
ignore = [
    "E501", # line too long
    "C901", # too complex
    "F841", # local variable is assigned to but never used
]
select = [
    'C', # flake8-comprehensions
    'B', # flake8-bugbear
    'E', # pycodestyle errors
    'F', # pyflakes
    'I', # iSort
    'W', # pycodestyle warnings
]
